* [BUGFIX] Fix inactive Wake On Lan button in quick action

mmc-core 4.4
============
* [FEATURE] Ability to use quick actions installed by the sql schemas for all users
* [FEATURE] Ability to run a custom quick action on a group
* [BUGFIX] Fix remote console shell for long commands


mmc-core 4.3
--------------

 * [FEATURE] Allow edition of clients config files from Pulse
 * [FEATURE] Filter computers list on presence status
 * [BUGFIX] Update translations


mmc-core 4.2
--------------

* [FEATURE] Quick action that installs the public key of the relay server to the machines
* [FEATURE] Allow a tooltip message on empty actions
* [FEATURE] Automatically redirect user to /mmc
* [FEATURE] Allow to call a plugin from a quick action
* [FEATURE] Add a file browser page for file-transfer folder
* [FEATURE] Download remote files from machines using XMPP
* [FEATURE] Add presence info on machines icons
* [BUGFIX] Fix the service module to work with newer systemd
* [BUGFIX] Fix the color of quick action alerts
* [BUGFIX] Fix quote characters in quick actions
* [BUGFIX] Fix alignment of action icons
* [BUGFIX] Update translations

mmc-core 4.1
--------------

* [FEATURE] New history view that captures all operations
* [FEATURE] Pulse update module widget is now a standalone widget
* [FEATURE] Create and run custom quick actions
* [BUGFIX] Fix authentication to GLPI for user provisioning

mmc-core 3.1.1
--------------

 * Feature #2170: Create defaultUserGroup when starting
 * Bug #2115: Mixup between client.async and client.sync cookies
 * Bug #2155: Change user password for root doesn't work
 * Bug #2156: Removed deprecated functions
 * Bug #2186: Users with "no password expiration" policy still have an expiration
              date on the samba side
 * Bug #2256: Allow to change SAMBA password when pwdReset is set
 * Bug #2257: Port to jQuery

mmc-core 3.1.0
--------------

 * New dashboard plugin
 * New services plugin (systemd integration)