@@ -1,4 +1,5 @@
 * [BUGFIX] Fix inactive Wake On Lan button in quick action
+* [BUGFIX] Fix the wrong count of machines in MachineOnline widget
 
 mmc-core 4.4
 ============
